all change respective to host website

--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,13 @@ DB_HOST=localhost
 DB_NAME=auto_service
 DB_PASSWORD=Yogi.DB
 DB_PORT=5432
-DATABASE_URL=postgresql://postgres:Yogi.DB@localhost:5432/auto_service
+
+# Database URL for local development
+# DATABASE_URL=postgresql://postgres:Yogi.DB@localhost:5432/auto_service
+
+# Database URL for Render.com
+DATABASE_URL=postgresql://auto_service_qd5m_user:VemIDveiykmbUMpAb450yKfs5JNKbdeJ@dpg-cvuiipc9c44c7383num0-a.oregon-postgres.render.com/auto_service_qd5m
+
 
 # Server Port
 PORT=5000
