add email function

--- a/backend/.env
+++ b/backend/.env
@@ -5,7 +5,6 @@ DB_NAME=auto_service
 DB_PASSWORD=Yogi.DB
 DB_PORT=5432
 
-
 # Database URL for local development
 #DATABASE_URL=postgresql://postgres:Yogi.DB@localhost:5432/auto_service?sslmode=disable
 
@@ -14,3 +13,7 @@ DATABASE_URL=postgresql://auto_service_qd5m_user:VemIDveiykmbUMpAb450yKfs5JNKbde
 
 # Server Port
 PORT=5000
+
+# Email Configuration
+EMAIL_USER=roadsidehelper19@gmail.com
+EMAIL_PASS=lncxvsrawvkfzzsd
